# ndk

./: README.md
ffmpeg_helloworld/app/: CMakeLists.txt  build.gradle
ffmpeg_helloworld/app/src/androidTest/java/com/leixiaohua1020/sffmpegandroidhelloworld/: ExampleInstrumentedTest.java
ffmpeg_helloworld/app/src/main/: AndroidManifest.xml
ffmpeg_helloworld/app/src/main/java/com/leixiaohua1020/sffmpegandroidhelloworld/: MainActivity.java
ffmpeg_helloworld/app/src/main/res/values/: styles.xml
ffmpeg_helloworld/app/src/test/java/com/leixiaohua1020/sffmpegandroidhelloworld/: ExampleUnitTest.java
ffmpeg_helloworld/gradle/wrapper/: gradle-wrapper.properties
ndk1/: build.gradle  gradle.properties  settings.gradle
ndk1/eg1/: build.gradle
ndk1/eg1/src/androidTest/java/com/sun/ndk1/: ExampleInstrumentedTest.java
ndk1/eg1/src/main/cpp/: com_sun_ndk1_MainActivity.h  native-lib.cpp
ndk1/eg1/src/main/java/com/sun/ndk1/: MainActivity.java
ndk1/eg1/src/main/res/layout/: activity_main.xml
ndk1/eg1/src/main/res/values/: strings.xml
ndk1/eg2/: CMakeLists.txt  build.gradle
ndk1/eg2/src/main/: AndroidManifest.xml
ndk1/eg2/src/main/cpp/: com_sun_ndk1_MainActivity.h  native-lib.cpp
ndk1/eg2/src/main/java/com/sun/ndk1/: MainActivity.java
ndk1/eg2/src/test/java/com/sun/ndk1/: ExampleUnitTest.java
